--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "walkdir": ">= 0.0.1",
     "underscore": ">= 1.3.1",
     "gaze": "~0.3.2",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "cli": "~0.4.4-2"
   },
   "bin": "bin/jasmine-node",
   "preferGlobal": true,
